--- a/src/layouts/MainRight/MainRight.module.scss
+++ b/src/layouts/MainRight/MainRight.module.scss
@@ -6,6 +6,7 @@
 
 @media screen and (max-width: 768px) {
     .wrapper {
+        height: 100dvh;
         position: absolute;
         top: 0;
         width: 100%;
